Fix background colors and opacity for readability

--- a/style/main.css
+++ b/style/main.css
@@ -11,7 +11,8 @@ body {
     border-radius: 0.5em;
     padding-left: 1em;
     padding-right: 2em;
-    opacity: 0.7;
+    background-color: white;
+    opacity: 0.6;
     box-shadow: 0 0 2px 2px rgba(8,8,8,0.3);
 }
 
@@ -22,6 +23,7 @@ body {
     position: fixed;
     text-decoration: none;
     font-size: 2em;
+    color: black;
 }
 
 img {
