--- a/style/menu.css
+++ b/style/menu.css
@@ -1,3 +1,6 @@
+body {
+    background-color: lightgray
+}
 h1, li {
     text-align: center;
 }
@@ -8,7 +11,8 @@ ul {
 }
 li {
     width: 100;
-    background-color: lightgray;
+    border: 2px solid gray;
+    background-color: white;
     display: block;
     margin: 1em;
     padding: 1em;
